Fix menu on mobile

--- a/src/scss/components/index/about.scss
+++ b/src/scss/components/index/about.scss
@@ -1,6 +1,7 @@
 .about {
   &__content {
     @include before-mobile {
+      height: 100vh;
       background-color: var(--main-orange);
       width: 100%;
       padding-left: 20px;
